Bug 91489 - Cannot enable display 1 when it was disabled in previous session
Summary: Cannot enable display 1 when it was disabled in previous session
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Pavel Grunt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-28 14:52 UTC by Pavel Grunt
Modified: 2015-08-03 09:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Grunt 2015-07-28 14:52:06 UTC
Description of problem:
It is not possible to enable the display 1 of the multimonitor Windows virtual machine, when the display was disabled in the previous session, because the checkbox to enable display 1 is missing from the View->Displays menu.

Version-Release number of selected component (if applicable):
virt-viewer-2.0
spice-gtk3-0.29

guest: Windows 7, spice guest tools 0.100

How reproducible:
100%

Steps to Reproduce:
1. connect using remote-viewer to a win7 vm having 2 qxl devices
2. enable display 2 (View->Displays->Display 2)
3. disable display 1 (View->Displays->Display 1)
4. close remote-viewer
5. connect again
6. check View->Displays menu

Actual results:
It is not possible to enable the display 1, because the checkbox for "Display 1" is missing from the View->Displays menu

Expected results:
The menu contains "Display 1"

Additional info:
The display can be enabled using the "Screen resolution" applet.
In virt-viewer 1.0 the menu contains the checkbox for display 1


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.