Notify about existence of monitor for all display channels

Windows guest can have disabled display on the display chanel #0, in
that case it will not be listed in virt-viewer's "View->Displays" menu

Resolves:
https://bugs.freedesktop.org/show_bug.cgi?id=91489